--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -10,9 +11,12 @@
         <nav>
             <div class="container-nav">
                 <div class="margin">
-                    <div class="logo"></div>
+                    <div class="logo">
+                        <img src="./images/logo.jpg" alt="">
+                        <img src="./images/company-name.jpg" alt="">
+                    </div>
                     <div class="name">
-                        Research Professional<span>Platform</span>
+                        Research Professional <span>Platform</span>
                     </div>
                     <ul>
                         <li><a href="">Home</a></li>
@@ -26,5 +30,105 @@
             </div>
         </nav>
     </header>
+    <!-- End of Header ------------------------------------------------>
+
+    <section id="landing">
+        <div class="container-landing">
+            <div class="margin">
+                <h2>ACME Wealth</h2>
+                <h1>Management <br/> Platforms</h1>
+                <div class="dots"></div>
+                <h3>Investment excellence</h3>
+                <h3>Diversity of thought</h3>
+                <h3>Organizational strength</h3>
+            </div>
+        </div>
+    </section>
+    <!-- End of Landing ------------------------------------------------>
+
+    <section id="insights">
+        <div class="container-insights">
+            <div class="margin">
+                <h3>ACME Insights</h3>
+                <p>How are factors being used around the word?</p>
+            </div>
+            <div class="container-cards">
+                <div class="card">
+                    <img src="./images/card1.png" alt="">
+                    <h3>Global Factor<br/>Investing Factor</h3>
+                </div>
+                <div class="card">
+                    <img src="./images/card2.png" alt="">
+                    <h3>2019<br/>Outlook</h3>
+                </div>
+                <div class="card">
+                    <img src="./images/card3.png" alt="">
+                    <h3>Capital Market<br/>Assumption</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End of Insights ------------------------------------------------>
+
+    <section id="about">
+        <div class="container-about">
+            <div class="margin">
+                <h3>Our Commitment to Professionals</h3>
+                <p>We help our partners deliver industry leading results with a commitment to excellence, thought-provoking insights and experienced
+                    distribution. We are laser focused on our shared goal - helping clients achieve their objectives.
+                </p>
+                <button>Contact Us</button>
+            </div>
+        </div>
+    </section>
+    <!-- End of About ------------------------------------------------>
+
+    <section id="events">
+        <div class="container-events">
+            <div class="margin">
+                <h3>Upcoming Events</h3>
+                <p>This needs a great tagline but i'll fit it in later</p>
+                <div class="card">
+                    <img src="./images/events.jpg" alt="">
+                    <h4>JAN<span class="date">28</span></h4>
+                    <h3>Insights Exchange Network</h3>
+                    <p>Join us for this conference showcasing innovation...</p>
+                    <button class="btn-events">Get More Insight</button>
+                    <p>Chicago, IL</p>
+                </div>
+                <div class="card">
+                    <img src="./images/events.jpg" alt="">
+                    <h4>FEB<span class="date">12</span></h4>
+                    <h3>Citywide Buyer's Retreat</h3>
+                    <p>Find out how banks are responding to the changing future of interest...</p>
+                    <button class="btn-events">Get More Insight</button>
+                    <p>The Wagner, New York</p>
+                </div>
+                <div class="card">
+                    <img src="./images/events.jpg" alt="">
+                    <h4>May<span class="date">6</span></h4>
+                    <h3>Research Exchange</h3>
+                    <p>Find the best online resources to help with your invesments...</p>
+                    <button class="btn-events">Get More Insight</button>
+                    <p>London, England</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End of Events ------------------------------------------------>
+
+    <footer>
+        <div class="container-footer">
+            <div class="margin">
+                <div class="footer-col">
+                    <p>Call us at 111-222-333 <br> for more information</p>
+                </div>
+                <div class="footer-col">
+                    <p>Social Share <i></i> <i></i> <i></i> <i></i></p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
