--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <header>
         <nav>
             <div class="container-nav">
+                <div class="hamburger">
+                    <div class="lines"></div>
+                    <div class="lines"></div>
+                    <div class="lines"></div>
+                </div>  
                 <div class="margin">
                     <div class="logo">
                         <img src="./images/logo.jpg" alt="">
@@ -18,16 +23,15 @@
                     </div>
                     <div class="name">
                         Research Professional <span>Platform</span>
-                    </div>
-                    <ul>
+                    </div>               
+                    <ul class="nav-items">
                         <li><a href="">Home</a></li>
                         <li><a href="">About Us</a></li>
                         <li><a href="">Insights</a></li>
                         <li><a href="">Events</a></li>
                         <li><a href="">Contacts Us</a></li>
-                    </ul>
+                    </ul>    
                 </div>
-
             </div>
         </nav>
     </header>
@@ -52,19 +56,19 @@
             <div class="margin">
                 <h3>ACME Insights</h3>
                 <p>How are factors being used around the word?</p>
-            </div>
-            <div class="container-cards">
-                <div class="card">
-                    <img src="./images/card1.png" alt="">
-                    <h3>Global Factor<br/>Investing Factor</h3>
-                </div>
-                <div class="card">
-                    <img src="./images/card2.png" alt="">
-                    <h3>2019<br/>Outlook</h3>
-                </div>
-                <div class="card">
-                    <img src="./images/card3.png" alt="">
-                    <h3>Capital Market<br/>Assumption</h3>
+                <div class="container-cards">
+                    <div class="card">
+                        <img src="./images/card1.png" alt="">
+                        <h3>Global Factor<br/>Investing Factor</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./images/card2.png" alt="">
+                        <h3>2019<br/>Outlook</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./images/card3.png" alt="">
+                        <h3>Capital Market<br/>Assumption</h3>
+                    </div>
                 </div>
             </div>
         </div>
@@ -130,6 +134,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="./app.js"></script>
 
 </body>
 </html>
