--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav id="navigation">
             <div class="container-nav">
                 <div class="hamburger">
                     <div class="lines"></div>
@@ -88,7 +88,7 @@
     </section>
     <!-- End of About ------------------------------------------------>
 
-    <!-- <section id="events">
+    <section id="events">
         <div class="container-events">
             <div class="margin">
                 <h3>Upcoming Events</h3>
@@ -119,7 +119,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- End of Events ------------------------------------------------>
 
     <footer>
