--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="container-landing">
             <div class="margin">
                 <h2>ACME Wealth</h2>
-                <h1>Management <br/> Platforms</h1>
+                <h1>Management Platforms</h1>
                 <div class="dots"></div>
                 <h3>Investment excellence</h3>
                 <h3>Diversity of thought</h3>
