fixed nav landscape

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 <p class="address">London, England</p>
                             </div>
                         </div>
-                        <div role="tablist" class="glider-dots"></div>
+                        <div role="tablist" class="glider-dots2"></div>
                     </div>
                 </div>
                     
