--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                         Research Professional <span>Platform</span>
                     </div>               
                     <ul class="nav-items">
-                        <li><a href="#landing">Home</a></li>
-                        <li><a href="#about">About Us</a></li>
-                        <li><a href="#insights">Insights</a></li>
-                        <li><a href="#events">Events</a></li>
-                        <li><a href="#contacts">Contacts Us</a></li>
+                        <li><a href="#landing" class="nav-links">Home</a></li>
+                        <li><a href="#about" class="nav-links">About Us</a></li>
+                        <li><a href="#insights" class="nav-links">Insights</a></li>
+                        <li><a href="#events" class="nav-links">Events</a></li>
+                        <li><a href="#contacts" class="nav-links">Contacts Us</a></li>
                     </ul>    
                 </div>
             </div>
